--- a/week2/TechCrunch/index.html
+++ b/week2/TechCrunch/index.html
@@ -11,8 +11,8 @@
     <!--Navigation-->
     <nav>
       <ul>
-        <li><img src="TechCrunch.jpg" alt="TechCrunch Logo" /></li>
-        <li>Join TechCrunch+</li>
+        <li><img src="TechCrunch1.png" alt="TechCrunch Logo" /></li>
+        <li class="join">Join TechCrunch+</li>
         <li>Search</li>
         <li>Startups</li>
         <li>TechCrunch+</li>
@@ -24,84 +24,112 @@
         <li>More</li>
       </ul>
     </nav>
+    <section id="maincontainer">
+      <!--Top Section-->
+      <section id="top">
+        <!--Top Section - Main Article-->
+        <article id="mainarticle">
+          <h2>Microsoft to buy Activision Blizzard for $68.7 billion</h2>
+          <h6>Amanda Silberling</h6>
+          <img
+            src="activision.png"
+            alt="Activision Logo and Call of Duty Black Ops on Screen"
+          />
+        </article>
+        <!--Top Section - Other Articles-->
+        <section id="otherarticles">
+          <article>
+            <h3>
+              Register today for DeFi and the Future of Programmable Money
+              Summit
+            </h3>
+            <h6>Alexandra Ames</h6>
+          </article>
+          <article>
+            <img src="tcplus.png" />
+            <h3>For investors, future of work isn't only about HR</h3>
+            <h6>Anna Heim</h6>
+          </article>
+          <article>
+            <h3>
+              Upward plans to open a 250,000-square-foot verticle farm in PA
+              early next year
+            </h3>
+            <h6>Brian Heater</h6>
+          </article>
+          <article>
+            <h3>
+              Wayve raises $200M Series B led by Eclipse for its AI for
+              autonomous delivery vehicles
+            </h3>
+            <h6>Mike Butcher</h6>
+          </article>
+        </section>
+      </section>
 
-    <!--Top Section-->
-    <section>
-      <!--Top Section - Main Article-->
-      <article id="mainarticle">
-        <h2>Microsoft to buy Activision Blizzard for $68.7 billion</h2>
-        <h6>Amanda Silberling</h6>
-        <img
-          src="activision.jpg"
-          alt="Activision Logo and Call of Duty Black Ops on Screen"
-        />
-      </article>
-      <!--Top Section - Other Articles-->
-      <section id="otherarticles"></section>
-    </section>  
-
-    <!--The Latest News Section-->
-    <section id="thelastest">
-      <article>
-        <div>
-          <h3>
-            Snapchat says it's getting better at finding illicit drug dealers
-            before users do
-          </h3>
-          <h6>Taylor Hatmaker</h6>
-          <span>11:15 AM PST • January 18, 2022</span>
-        </div>
-        <div>
-          <p>
-            Snapchat has faced inscreasing criticism in recent years as the
-            opioid plays out on social media, often with tragic results. In
-            october, an NBC investigation reported the stories of a number...
-          </p>
-        </div>
-        <div>
-          <img src="snapchat.jpg" alt="Snapchat App" />
-        </div>
-      </article>
-      <article>
-        <div>
-          <img src="tc+.jpg" alt="TechCrunch+ Logo" />
-          <h3>
-            Will quantum computing remain the domain of the specialist VC?
-          </h3>
-          <h6>Maria Lepskaya</h6>
-          <span>11:06 AM PST • January 18, 2022</span>
-        </div>
-        <div>
-          <p>
-            Despite all the buzz, quantum invesments are still not mainstream:
-            there were about 90 quantum investments in 2021.
-          </p>
-        </div>
-        <div>
-          <img src="quantum.jpg" alt="Quantum computing" />
-        </div>
-      </article>
-      <article>
-        <div>
-          <h3>
-            Ex-Dispo founding members launch Roll app, where creators post
-            exclusive content
-          </h3>
-          <h6>Taylor Hatmaker</h6>
-          <span>11:15 AM PST • January 18, 2022</span>
-        </div>
-        <div>
-          <p>
-            Today marks the launch of the Roll app, which aims to create an easy
-            way for creators to make an extra buck while portraying a
-            potentially more authentic version of themselves to their fans.
-            Alread...
-          </p>
-        </div>
-        <div>
-          <img src="roll.jpg" alt="Roll app" />
-        </div>
-      </article>
+      <!--The Latest News Section-->
+      <section id="thelatest">
+        <article>
+          <div>
+            <h3>
+              Snapchat says it's getting better at finding illicit drug dealers
+              before users do
+            </h3>
+            <h6>Taylor Hatmaker</h6>
+            <span>11:15 AM PST • January 18, 2022</span>
+          </div>
+          <div>
+            <p>
+              Snapchat has faced inscreasing criticism in recent years as the
+              opioid plays out on social media, often with tragic results. In
+              october, an NBC investigation reported the stories of a number...
+            </p>
+          </div>
+          <div>
+            <img src="snapchat.png" alt="Snapchat App" />
+          </div>
+        </article>
+        <article>
+          <div>
+            <img src="tcplus.png" alt="TechCrunch+ Logo" />
+            <h3>
+              Will quantum computing remain the domain of the specialist VC?
+            </h3>
+            <h6>Maria Lepskaya</h6>
+            <span>11:06 AM PST • January 18, 2022</span>
+          </div>
+          <div>
+            <p>
+              Despite all the buzz, quantum invesments are still not mainstream:
+              there were about 90 quantum investments in 2021.
+            </p>
+          </div>
+          <div>
+            <img src="quantum.png" alt="Quantum computing" />
+          </div>
+        </article>
+        <article>
+          <div>
+            <h3>
+              Ex-Dispo founding members launch Roll app, where creators post
+              exclusive content
+            </h3>
+            <h6>Taylor Hatmaker</h6>
+            <span>11:15 AM PST • January 18, 2022</span>
+          </div>
+          <div>
+            <p>
+              Today marks the launch of the Roll app, which aims to create an
+              easy way for creators to make an extra buck while portraying a
+              potentially more authentic version of themselves to their fans.
+              Alread...
+            </p>
+          </div>
+          <div>
+            <img src="roll.png" alt="Roll app" />
+          </div>
+        </article>
+      </section>
     </section>
   </body>
 </html>
